fix(home-page): Firefox Related CSS errors (#35)
* fix: cannot click see more link on firefox

* fix: firefox mac scrollbar not hidden

* format: run prettier

--- a/src/style/root.css
+++ b/src/style/root.css
@@ -15,3 +15,11 @@ body {
 ::-webkit-scrollbar {
   display: none;
 }
+
+.atropos-scale {
+  pointer-events: none;
+}
+
+.atropos-rotate {
+  pointer-events: all;
+}
